welcome.lessons.welcome.loopfor.LoopStairs.scala.error
Runner:12: error: not found: value colorGreen
      leveBrosse(); setCouleurBrosse(colorGreen);
                                     ^